tests/ui/error-codes/E0116.stderr
error[E0116]: cannot define inherent `impl` for a type outside of the crate where the type is defined
  --> $DIR/E0116.rs:1:1
   |
LL | impl Vec<u8> {}
   | ^^^^^^^^^^^^ impl for type defined outside of crate
   |
   = help: consider defining a trait and implementing it for the type or using a newtype wrapper like `struct MyType(ExternalType);` and implement it
   = note: For more details about orphan rules, see <https://doc.rust-lang.org/reference/items/implementations.html?highlight=orphan#orphan-rules>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0116`.
